--- a/index.html
+++ b/index.html
@@ -32,131 +32,120 @@
       data-bs-spy="scroll"
       data-bs-target="#nav-scroll"
    >
-      <div class="fadeIn wow" data-wow-duration="2s">
-         <header class="header-top">
-            <div class="top bg-main">
-               <div
-                  class="container d-lg-flex justify-content-between align-items-center text-center text-lg-start py-1"
-               >
-                  <ul class="list-inline mb-0">
-                     <li class="list-inline-item text-white">
-                        <i class="fa-solid fa-envelope"></i>
-                        <a
-                           href="mailto:amelmaster16@gmail.com"
-                           class="text-reset"
-                           >amelmaster16@gmail.com</a
-                        >
-                     </li>
-                     <li class="list-inline-item text-white">
-                        <i class="fa-solid fa-phone-volume"></i>
-                        <a href="tel:+201015265077" class="text-reset"
-                           >01015265077</a
-                        >
-                     </li>
-                  </ul>
-                  <div class="social">
-                     <ul
-                        class="mb-0 hstack justify-content-center justify-content-lg-start gap-2"
+      <header class="header-top">
+         <div class="top bg-main">
+            <div
+               class="container d-lg-flex justify-content-between align-items-center text-center text-lg-start py-1"
+            >
+               <ul class="list-inline mb-0">
+                  <li class="list-inline-item text-white">
+                     <i class="fa-solid fa-envelope"></i>
+                     <a href="mailto:amelmaster16@gmail.com" class="text-reset"
+                        >amelmaster16@gmail.com</a
                      >
-                        <li>
-                           <a href="#">
-                              <i class="fab fa-facebook-f"></i>
-                           </a>
-                        </li>
-                        <li>
-                           <a href="#">
-                              <i class="fab fa-instagram"></i>
-                           </a>
-                        </li>
-                        <li>
-                           <a href="#">
-                              <i class="fab fa-github"></i>
-                           </a>
-                        </li>
-                     </ul>
-                  </div>
-               </div>
-            </div>
-         </header>
-         <nav
-            class="navbar navbar-expand-lg bg-white py-3 position-sticky top-0 top-index"
-            id="nav-scroll"
-         >
-            <div class="container">
-               <a class="navbar-brand fw-bold fs-3" href="#"
-                  >Prixima<span class="text-main">.</span></a
-               >
-               <button
-                  class="navbar-toggler"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#navbarSupportedContent"
-                  aria-controls="navbarSupportedContent"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation"
-               >
-                  <span class="navbar-toggler-icon"></span>
-               </button>
-               <div
-                  class="collapse navbar-collapse"
-                  id="navbarSupportedContent"
-               >
-                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                     <li class="nav-item">
-                        <a
-                           class="nav-link active"
-                           aria-current="page"
-                           href="#home"
-                           >Home</a
-                        >
+                  </li>
+                  <li class="list-inline-item text-white">
+                     <i class="fa-solid fa-phone-volume"></i>
+                     <a href="tel:+201015265077" class="text-reset"
+                        >01015265077</a
+                     >
+                  </li>
+               </ul>
+               <div class="social">
+                  <ul
+                     class="mb-0 hstack justify-content-center justify-content-lg-start gap-2"
+                  >
+                     <li>
+                        <a href="#">
+                           <i class="fab fa-facebook-f"></i>
+                        </a>
                      </li>
-                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#about"
-                           >About</a
-                        >
+                     <li>
+                        <a href="#">
+                           <i class="fab fa-instagram"></i>
+                        </a>
                      </li>
-                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#services"
-                           >Services</a
-                        >
-                     </li>
-                     <li class="nav-item">
-                        <a
-                           class="nav-link"
-                           aria-current="page"
-                           href="#portfolio"
-                           >Portfolio</a
-                        >
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#team"
-                           >Team</a
-                        >
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#reviews"
-                           >Reviews</a
-                        >
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#blog"
-                           >Blog</a
-                        >
-                     </li>
-                     <li class="nav-item">
-                        <button
-                           type="button"
-                           class="btn px-4 btn-main"
-                           data-bs-toggle="modal"
-                           data-bs-target="#exampleModal"
-                        >
-                           Contact
-                        </button>
+                     <li>
+                        <a href="#">
+                           <i class="fab fa-github"></i>
+                        </a>
                      </li>
                   </ul>
                </div>
             </div>
-         </nav>
+         </div>
+      </header>
+      <nav
+         class="navbar navbar-expand-lg bg-white py-3 position-sticky top-0 top-index"
+         id="nav-scroll"
+      >
+         <div class="container">
+            <a class="navbar-brand fw-bold fs-3" href="#"
+               >Prixima<span class="text-main">.</span></a
+            >
+            <button
+               class="navbar-toggler"
+               type="button"
+               data-bs-toggle="collapse"
+               data-bs-target="#navbarSupportedContent"
+               aria-controls="navbarSupportedContent"
+               aria-expanded="false"
+               aria-label="Toggle navigation"
+            >
+               <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                     <a class="nav-link active" aria-current="page" href="#home"
+                        >Home</a
+                     >
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" aria-current="page" href="#about"
+                        >About</a
+                     >
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" aria-current="page" href="#services"
+                        >Services</a
+                     >
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" aria-current="page" href="#portfolio"
+                        >Portfolio</a
+                     >
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" aria-current="page" href="#team"
+                        >Team</a
+                     >
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" aria-current="page" href="#reviews"
+                        >Reviews</a
+                     >
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" aria-current="page" href="#blog"
+                        >Blog</a
+                     >
+                  </li>
+                  <li class="nav-item">
+                     <button
+                        type="button"
+                        class="btn px-4 btn-main"
+                        data-bs-toggle="modal"
+                        data-bs-target="#exampleModal"
+                     >
+                        Contact
+                     </button>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </nav>
+      <div class="fadeIn wow" data-wow-duration="2s">
          <header class="home" id="home">
             <!-- Set up your HTML -->
             <div class="slider-wraper owl-carousel">
